adicionado bloco de trabalho

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 	</head>
 	<body>
 		<h1>Olá Mundo!</h1>
+		<!-- Aqui se inicia o bloco de trabalho -->
+		<label> Nome do Usuário : </label><br>
+		<input type="text" placeholder= "Digite o seu nome de usuário">
+		<button>Login</button>
+		<!-- Aqui se encerra o bloco de trabalo -->
 	</body>
 </html>
