--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<label> Nome do Usuário : </label><br>
 		<input type="text" placeholder= "Digite o seu nome de usuário">
 		<button>Login</button>
-		<!-- Aqui se encerra o bloco de trabalo -->
+		<!-- Aqui se encerra o bloco de trabalho -->
 	</body>
 </html>
